Speed up ledger display

Don't do extensive checking when source model is unsorted to avoid
massive recursive calls.

BUG: 468108
FIXED-IN: 5.2